--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# TAVILY_API_KEY=your_actual_api_key_here
-TAVILY_API_KEY="TuOB90dvv7abEGU9sG8j3PLZnod6xykx"
+TAVILY_API_KEY=your_actual_api_key_here
+
 
